--- a/assets/css/cats.css
+++ b/assets/css/cats.css
@@ -714,7 +714,7 @@ body {
 }
 
 .coin1 {
-    background-image: url('../assets/css/ETH-100px.png');
+    background-image: url('ETH-100px.png');
     background-position: center;
     width: 100px;
     height: 100px;
