--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -61,7 +61,7 @@ footer {
     padding: 4vh;
     background-color: darkslategrey;
     color: white;
-    border-radius: 10px;
+    margin-top: 3vh;
 }
 
 .featureBox {
